# nocept

./: .dockerignore  .env.example  .gitignore  .webui_secret_key  API.md  ARCHITECTURE.md  ARCHITECTURE_DOCUMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBLOAT_COMPLETION.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURE_ASSESSMENT.md  IMPROVEMENTS_QUICK_REF.md  LICENSE  MISSING_FEATURES_VISUAL.md  OPEN_SOURCE_TRANSFORMATION.md  OPERATIONS.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROGRESS.md  README.md  USER_TRAINING_MATERIALS.md  WEEK5_PLAN.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  run_demo.py  test_tavily.py
.claude/: settings.local.json
agent/: __init__.py  _error_handling.py  classifier.py  comms_checker.py  context_retriever.py  history_checker.py  langgraph_agent.py  memo_generator.py  pipeline.py  researcher.py  rules_engine.py
analytics/: __init__.py  calculator.py
audit/: __init__.py  audit_logger.py
auth/: jwt_auth.py
clients/: __init__.py  redis_client.py  tavily_client.py
config/: __init__.py  settings.py
dashboard/: app.py
data/: README.md
dataset/: README.md  catalog.json  generate_data.py  generate_historical_approvals.py  generate_real_company_data.py  models.py
ingestion/: __init__.py  csv_ingestor.py  erp_simulator.py  json_ingestor.py  llm_extract.py  normalizer.py  ocr.py  sap_mapper.py  webhook_handler.py
knowledge/: __init__.py  client.py  email_store.py  embedder.py  resolution_store.py  seeder.py  transcript_store.py
models/: __init__.py  communication.py  exception.py  exception_record.py  grn.py  invoice.py  purchase_order.py  resolution.py  supplier.py
notifications/: models.py  notifier.py  sender.py
orchestrate/: agent_prompt.md  api.py
reports/: __init__.py  spend_variance.py
rules/: __init__.py  engine.py  models.py
state/: __init__.py  machine.py  redis_backend.py
tests/: conftest.py  test_approval_workflow.py  test_classifier.py  test_context_retriever.py  test_duplicate_detection.py  test_e2e_full_system.py  test_error_handling.py  test_ingestion.py  (+8 more)
(+18 files in other folders)
