[project]
name = "nocept"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.94.0",
    "fakeredis>=2.21",
    "fastapi>=0.110",
    "httpx>=0.27",
    "ibm-watsonx-ai>=1.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=1.24",
    "openai>=2.31.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "redis[hiredis]>=5.0",
    "sentence-transformers>=3.0",
    "streamlit>=1.33",
    "tavily-python>=0.3",
    "uvicorn>=0.29",
]
