[project]
name = "nocept"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.94.0",
    "celery[redis]>=5.3",
    "email-validator>=2.0",
    "fakeredis>=2.21",
    "fastapi>=0.110",
    "flower>=2.0",
    "httpx>=0.27",
    "ibm-watsonx-ai>=1.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langgraph>=0.0.30",
    "numpy>=1.24",
    "openai>=2.31.0",
    "pandas>=2.0",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pytesseract>=0.3.10",
    "redis[hiredis]>=5.0",
    "sentence-transformers>=3.0",
    "slack-sdk>=3.21",
    "streamlit>=1.33",
    "tavily-python>=0.3",
    "uvicorn>=0.29",
]
