[project]
name = "nocept"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "langgraph>=0.0.30",
    "openai>=2.31.0",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.6",
    "redis[hiredis]>=5.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "fakeredis>=2.21",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
